force-app/main/default/objects/Nota_fiscal_de_compra__c/Nota_fiscal_de_compra__c.object-meta.xml
<CustomObject>
    <label>Nota fiscal de contrato de compra</label>
    <nameField>
        <label>Nº da Nota</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas fiscais de contrato de compra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>