force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Assunto_Tarefa__c.field-meta.xml
<CustomField>
    <fullName>Assunto_Tarefa__c</fullName>
    <label>Assunto Tarefa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>