force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Chave_de_Acesso__c.field-meta.xml
<CustomField>
    <fullName>Chave_de_Acesso__c</fullName>
    <label>Chave de Acesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>