force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Contrato_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_compra__c</fullName>
    <label>Contrato de compra</label>
    <referenceTo>Contrato_de_compra__c</referenceTo>
    <relationshipName>Notas_fiscais_do_contrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>