force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Data_de_emissao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_emissao__c</fullName>
    <label>Data de emissão</label>
    <type>Date</type>
</CustomField>