force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Data_de_lan_amento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_lan_amento__c</fullName>
    <label>Data de lançamento</label>
    <type>Date</type>
</CustomField>