force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Data_de_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_vencimento__c</fullName>
    <label>Vencimento</label>
    <type>Date</type>
</CustomField>