force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>