force-app/main/default/objects/Nota_fiscal_de_compra__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
Lancada__c,
IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=015U4000006jaQU&amp;oid=00Di0000000JVhH&amp;lastMod=1717597205000&quot;, &quot;Lancada&quot;, 30, 150),
IMAGE(&quot;https://hospcom.file.force.com/servlet/servlet.ImageServer?id=015U4000006kCKU&amp;oid=00Di0000000JVhH&amp;lastMod=1717606410000&quot;, &quot;Não Lancada&quot;, 30, 150)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>