force-app/main/default/objects/Nota_fiscal_de_compra__c/validationRules/Valida_saldo.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_saldo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
    NOT(
        OR(
            Contrato_de_compra__r.RecordType.DeveloperName = &apos;Representacao_Comercial&apos;,
            TEXT(Contrato_de_compra__r.Tipo_de_dura_o__c) = &apos;Indeterminado&apos;
        )
    ),
    Valor_da_nota_fiscal__c &gt; Contrato_de_compra__r.Saldo__c
)</errorConditionFormula>
    <errorMessage>O valor da nota fiscal supera o saldo do contrato.</errorMessage>
</ValidationRule>